--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gray-matter": "4.0.2",
     "inquirer": "7.3.3",
     "markdown-it": "12.0.2",
-    "ora": "5.1.0"
+    "ora": "5.1.0",
+    "terminal-link": "2.1.1"
   },
   "devDependencies": {
     "eslint": "7.2.0",
