--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.21.0",
+    "cfonts": "2.8.6",
     "chalk": "4.1.0",
     "commander": "6.2.0",
     "gray-matter": "4.0.2",
     "inquirer": "7.3.3",
     "markdown-it": "12.0.2",
+    "open": "7.3.0",
     "ora": "5.1.0",
     "terminal-link": "2.1.1"
   },
